--- a/_includes/mega-nav.html
+++ b/_includes/mega-nav.html
@@ -303,7 +303,7 @@
               <li class="nav-list">
                 <div class="row nav-row">
                   <div class="col-md-12">
-                    <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/about/survey"><strong>Alumni Survey</strong></a>
+                    <a class="nav-link nav-link-main no-pad dark-text" target="_blank" rel="noopener" href="https://form.jotform.com/72415108814957"><strong>Alumni Survey</strong></a>
                   </div>
                 </div>
               </li>
