--- a/_includes/schedule-table.html
+++ b/_includes/schedule-table.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <div><p>Table Legend. <span style="background-color:#c60b46;color:white;padding:5px">Home games</span>&#160;<span style="background-color:#0f3b63;color:white;padding:5px">Away games</span></p></div>
+        <div><p><span style="background-color:#c60b46;color:white;padding:5px;display:inline-block;width:15px;height:15px;vertical-align:middle;">&#160;</span> = Home&#160;&#160;<span style="background-color:#0f3b63;color:white;padding:5px;display:inline-block;width:15px;height:15px;vertical-align:middle;">&#160;</span> = Away</p></div>
         <div class="table-responsive">
           <table class="table table-striped table-hover">
             <caption></caption>
