--- a/assets/scss/4-layout/_positioning.scss
+++ b/assets/scss/4-layout/_positioning.scss
@@ -10,3 +10,9 @@
 .long-heading {
   margin-right: -280px;
 }
+
+@media screen and (max-width: 768px) {
+  .long-heading {
+    margin-right: 0;
+  }
+}
