Fix jump links for iPhone and iOS ...
Jump link # must be preceded with a /
instead of baseball#coaches it becomes baseball/#coaches

--- a/_includes/sub-nav.html
+++ b/_includes/sub-nav.html
@@ -20,7 +20,7 @@
           <a href="{{page.baseurl}}{{page.base}}/stats" class="nav-link sub-nav-link">Stats</a>
         </li>
         <li class="nav-item">
-          <a href="{{page.baseurl}}{{page.base}}#coaches" class="nav-link sub-nav-link">Coaches</a>
+          <a href="{{page.baseurl}}{{page.base}}/#coaches" class="nav-link sub-nav-link">Coaches</a>
         </li>
       </ul>
     </div>
