Add donate to support dropdown of mega-nav

--- a/_includes/mega-nav.html
+++ b/_includes/mega-nav.html
@@ -255,6 +255,13 @@
                   </div>
                 </div>
               </li>
+              <li class="nav-list">
+                <div class="row nav-row">
+                  <div class="col-md-12">
+                    <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/support/donate"><strong>Donate</strong></a>
+                  </div>
+                </div>
+              </li>
             </ul>
             </div>
             <!-- /.col-md-8  -->
