Create descriptions for each page in YAML front-matter ...
Each page needs a unique description and is pulled from front-matter into the <head>
Add _comment: for CMS helper text of "description" field

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>{{page.title}} - {{site.title}}</title>
-        <meta name="description" content="{{site.description}}">
+        <meta name="description" content="{{page.description}}">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- YouTube API -->
         <meta name="yt-api-k" value="AIzaSyBpxv9JNl4AX816ScNmZcqHkLncMUeiAws" />
