Add a margin-left to .coaches-heading class...
Coaches heading (and little icons) was displaying too far left (especially in mobile devices).
Coaches heading display was inconsistent with all other headings in page.

Added {margin-left: 15px} to .coaches-heading class to make the heading line up with other headings in page.

--- a/assets/scss/1-base/_typography.scss
+++ b/assets/scss/1-base/_typography.scss
@@ -158,6 +158,7 @@ p {
   font-family: $secondaryfont-stack;
   font-size: 1.4em;
   font-weight: $secondaryfont-weight-regular;
+  margin-left: 15px;
 }
 
 .coach-name {
