Remove md5-plugin parsing of href/id string for news modals...
Replace with standard liquid filters to generate unique id's that follow id value conventions:
Use liquid to strip out any spaces and special characters like ! @ # $ % ^ & " ' : ; ...etc.

Curly braces "{ }" are strictly forbidden (i.e. Verboten!) in post.title
Post titles should also have a unique name (no duplicate titles allowed)

--- a/_includes/news-item-modal.html
+++ b/_includes/news-item-modal.html
@@ -1,5 +1,5 @@
 <!--  News item modal  -->
-<div class="modal fade" id="{{ post.title | md5 }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+<div class="modal fade" id="{{ post.title | escape | remove: " " | remove: "&" | remove: "." | remove: "," | remove: "!" | remove: "?" | remove: "/" | remove: "@" | remove: "\" | remove: "#" | remove: "$" | remove: "%" | remove: "^" | remove: "*" | remove: "(" | remove: ")" | remove: "-" | remove: "_" | remove: "+" | remove: "=" | remove: "<" | remove: ">" | remove: "~" | remove: "`" | remove: "[" | remove: "]" | remove: ";" | remove: ":" | remove: "|" }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
