--- a/_includes/news-item.html
+++ b/_includes/news-item.html
@@ -1,12 +1,12 @@
 <!--  News roll-up item  -->
 <li class="no-bullet news__list-item">
   <div class="news__cell-left">
-    <a data-toggle="modal" href="#{{ post.title | md5 }}" class="news__link">
+    <a data-toggle="modal" href="#{{ post.title | escape | remove: " " | remove: "&" | remove: "." | remove: "," | remove: "!" | remove: "?" | remove: "/" | remove: "@" | remove: "\" | remove: "#" | remove: "$" | remove: "%" | remove: "^" | remove: "*" | remove: "(" | remove: ")" | remove: "-" | remove: "_" | remove: "+" | remove: "=" | remove: "<" | remove: ">" | remove: "~" | remove: "`" | remove: "[" | remove: "]" | remove: ";" | remove: ":" | remove: "|" }}" class="news__link">
       <img src="{{ post.news_thumb_image }}" class="news__thumb" alt="">
     </a>
   </div>
   <div class="news__cell-right">
-    <a data-toggle="modal" href="#{{ post.title | md5 }}" class="news__link">
+    <a data-toggle="modal" href="#{{ post.title | escape | remove: " " | remove: "&" | remove: "." | remove: "," | remove: "!" | remove: "?" | remove: "/" | remove: "@" | remove: "\" | remove: "#" | remove: "$" | remove: "%" | remove: "^" | remove: "*" | remove: "(" | remove: ")" | remove: "-" | remove: "_" | remove: "+" | remove: "=" | remove: "<" | remove: ">" | remove: "~" | remove: "`" | remove: "[" | remove: "]" | remove: ";" | remove: ":" | remove: "|" }}" class="news__link">
       <h5 class="news__sub-heading news__sub-heading--spacing"> {{ post.sport-category }} &#183; <span class="news__date"> {{ post.date | date: "%B %-d, %Y" }} </span></h5>
       <h4 class="news__heading">{{ post.title }}</h4>
       <p class="news__paragraph">{{ post.description }}</p>
