Fix mega-nav bottom border on sports dropdown to resemble design mockups...
The border underlining Baseball, Basketball, etc. is no longer full length.
Schedule, roster, news links are no longer all caps
Schedule, roster, news links are tightened-up and further to the right

Fix via adding the following classes found in typography.scss and mega-nav.scss:
typography__nav-link-secondary
mega-nav__sport-name--margin-right

--- a/_includes/mega-nav.html
+++ b/_includes/mega-nav.html
@@ -17,50 +17,50 @@
                   <ul class="nav flex-column">
                     <h3 class="menu-heading">Men's Sports</h3>
                     <li class="nav-list">
-                      <div class="row nav-row">
-                        <div class="col-md-4">
+                      <div class="row nav-row mega-nav__nav-row--bottom-border">
+                        <div class="col-md-4 mega-nav__sport-name--margin-right">
                           <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/baseball"><strong>Baseball</strong></a>
                         </div>
-                        <div class="col-md-2 d-none d-md-block">
-                          <a class="nav-link nav-link-main no-pad dark-text schedule-link" href="{{site.baseurl}}/baseball/schedule">Schedule</a>
+                        <div class="col-md-2 d-none d-md-block text-right">
+                          <a class="nav-link typography__nav-link-secondary no-pad dark-text schedule-link" href="{{site.baseurl}}/baseball/schedule">Schedule</a>
                         </div>
-                        <div class="col-md-2 d-none d-md-block">
-                          <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/baseball/roster">Roster</a>
+                        <div class="col-md-2 d-none d-md-block text-center">
+                          <a class="nav-link typography__nav-link-secondary no-pad dark-text" href="{{site.baseurl}}/baseball/roster">Roster</a>
                         </div>
-                        <div class="col-md-2 d-none d-md-block">
-                          <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/baseball/news">News</a>
+                        <div class="col-md-2 d-none d-md-block text-left">
+                          <a class="nav-link typography__nav-link-secondary no-pad dark-text" href="{{site.baseurl}}/baseball/news">News</a>
                         </div>
                       </div>
                     </li>
                     <li class="nav-list">
-                      <div class="row nav-row">
-                        <div class="col-md-4">
+                      <div class="row nav-row mega-nav__nav-row--bottom-border">
+                        <div class="col-md-4 mega-nav__sport-name--margin-right">
                           <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/mens-basketball"><strong>Basketball</strong></a>
                         </div>
-                        <div class="col-md-2 d-none d-md-block">
-                          <a class="nav-link nav-link-main no-pad dark-text schedule-link" href="{{site.baseurl}}/mens-basketball/schedule">Schedule</a>
+                        <div class="col-md-2 d-none d-md-block text-right">
+                          <a class="nav-link typography__nav-link-secondary no-pad dark-text schedule-link" href="{{site.baseurl}}/mens-basketball/schedule">Schedule</a>
                         </div>
-                        <div class="col-md-2 d-none d-md-block">
-                          <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/mens-basketball/roster">Roster</a>
+                        <div class="col-md-2 d-none d-md-block text-center">
+                          <a class="nav-link typography__nav-link-secondary no-pad dark-text" href="{{site.baseurl}}/mens-basketball/roster">Roster</a>
                         </div>
-                        <div class="col-md-2 d-none d-md-block">
-                          <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/mens-basketball/news">News</a>
+                        <div class="col-md-2 d-none d-md-block text-left">
+                          <a class="nav-link typography__nav-link-secondary no-pad dark-text" href="{{site.baseurl}}/mens-basketball/news">News</a>
                         </div>
                       </div>
                     </li>
                     <li class="nav-list">
                       <div class="row nav-row">
-                        <div class="col-md-4">
+                        <div class="col-md-4 mega-nav__sport-name--margin-right">
                           <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/soccer"><strong>Soccer</strong></a>
                         </div>
-                        <div class="col-md-2 d-none d-md-block">
-                          <a class="nav-link nav-link-main no-pad dark-text schedule-link" href="{{site.baseurl}}/soccer/schedule">Schedule</a>
+                        <div class="col-md-2 d-none d-md-block text-right">
+                          <a class="nav-link typography__nav-link-secondary no-pad dark-text schedule-link" href="{{site.baseurl}}/soccer/schedule">Schedule</a>
                         </div>
-                        <div class="col-md-2 d-none d-md-block">
-                          <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/soccer/roster">Roster</a>
+                        <div class="col-md-2 d-none d-md-block text-center">
+                          <a class="nav-link typography__nav-link-secondary no-pad dark-text" href="{{site.baseurl}}/soccer/roster">Roster</a>
                         </div>
-                        <div class="col-md-2 d-none d-md-block">
-                          <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/soccer/news">News</a>
+                        <div class="col-md-2 d-none d-md-block text-left">
+                          <a class="nav-link typography__nav-link-secondary no-pad dark-text" href="{{site.baseurl}}/soccer/news">News</a>
                         </div>
                       </div>
                     </li>
@@ -70,50 +70,50 @@
                   <ul class="nav flex-column">
                     <h3 class="menu-heading">Women's Sports</h3>
                     <li class="nav-list">
-                      <div class="row nav-row">
-                        <div class="col-md-4">
+                      <div class="row nav-row mega-nav__nav-row--bottom-border">
+                        <div class="col-md-4 mega-nav__sport-name--margin-right">
                           <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/womens-basketball"><strong>Basketball</strong></a>
                         </div>
-                        <div class="col-md-2 d-none d-md-block">
-                          <a class="nav-link nav-link-main no-pad dark-text schedule-link" href="{{site.baseurl}}/womens-basketball/schedule">Schedule</a>
+                        <div class="col-md-2 d-none d-md-block text-right">
+                          <a class="nav-link typography__nav-link-secondary no-pad dark-text schedule-link" href="{{site.baseurl}}/womens-basketball/schedule">Schedule</a>
                         </div>
-                        <div class="col-md-2 d-none d-md-block">
-                          <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/womens-basketball/roster">Roster</a>
+                        <div class="col-md-2 d-none d-md-block text-center">
+                          <a class="nav-link typography__nav-link-secondary no-pad dark-text" href="{{site.baseurl}}/womens-basketball/roster">Roster</a>
                         </div>
-                        <div class="col-md-2 d-none d-md-block">
-                          <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/womens-basketball/news">News</a>
+                        <div class="col-md-2 d-none d-md-block text-left">
+                          <a class="nav-link typography__nav-link-secondary no-pad dark-text" href="{{site.baseurl}}/womens-basketball/news">News</a>
                         </div>
                       </div>
                     </li>
                     <li class="nav-list">
-                      <div class="row nav-row">
-                        <div class="col-md-4">
+                      <div class="row nav-row mega-nav__nav-row--bottom-border">
+                        <div class="col-md-4 mega-nav__sport-name--margin-right">
                           <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/softball"><strong>Softball</strong></a>
                         </div>
-                        <div class="col-md-2 d-none d-md-block">
-                          <a class="nav-link nav-link-main no-pad dark-text schedule-link" href="{{site.baseurl}}/softball/schedule">Schedule</a>
+                        <div class="col-md-2 d-none d-md-block text-right">
+                          <a class="nav-link typography__nav-link-secondary no-pad dark-text schedule-link" href="{{site.baseurl}}/softball/schedule">Schedule</a>
                         </div>
-                        <div class="col-md-2 d-none d-md-block">
-                          <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/softball/roster">Roster</a>
+                        <div class="col-md-2 d-none d-md-block text-center">
+                          <a class="nav-link typography__nav-link-secondary no-pad dark-text" href="{{site.baseurl}}/softball/roster">Roster</a>
                         </div>
-                        <div class="col-md-2 d-none d-md-block">
-                          <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/softball/news">News</a>
+                        <div class="col-md-2 d-none d-md-block text-left">
+                          <a class="nav-link typography__nav-link-secondary no-pad dark-text" href="{{site.baseurl}}/softball/news">News</a>
                         </div>
                       </div>
                     </li>
                     <li class="nav-list">
                       <div class="row nav-row">
-                        <div class="col-md-4">
+                        <div class="col-md-4 mega-nav__sport-name--margin-right">
                           <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/volleyball"><strong>Volleyball</strong></a>
                         </div>
-                        <div class="col-md-2 d-none d-md-block">
-                          <a class="nav-link nav-link-main no-pad dark-text schedule-link" href="{{site.baseurl}}/volleyball/schedule">Schedule</a>
+                        <div class="col-md-2 d-none d-md-block text-right">
+                          <a class="nav-link typography__nav-link-secondary no-pad dark-text schedule-link" href="{{site.baseurl}}/volleyball/schedule">Schedule</a>
                         </div>
-                        <div class="col-md-2 d-none d-md-block">
-                          <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/volleyball/roster">Roster</a>
+                        <div class="col-md-2 d-none d-md-block text-center">
+                          <a class="nav-link typography__nav-link-secondary no-pad dark-text" href="{{site.baseurl}}/volleyball/roster">Roster</a>
                         </div>
-                        <div class="col-md-2 d-none d-md-block">
-                          <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/volleyball/news">News</a>
+                        <div class="col-md-2 d-none d-md-block text-left">
+                          <a class="nav-link typography__nav-link-secondary no-pad dark-text" href="{{site.baseurl}}/volleyball/news">News</a>
                         </div>
                       </div>
                     </li>
@@ -141,7 +141,7 @@
               <div class="col-md-8">
                 <ul class="nav flex-column">
                 <li class="nav-list">
-                  <div class="row nav-row facilities-drop-pad">
+                  <div class="row nav-row facilities-drop-pad mega-nav__nav-row--half-bottom-border">
                     <div class="col-md-12">
                       <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/facilities/fitness-center"><strong>Fitness Center</strong></a>
                     </div>
@@ -177,35 +177,35 @@
               <div class="col-md-8">
                 <ul class="nav flex-column">
                 <li class="nav-list">
-                  <div class="row nav-row recruit-pad">
+                  <div class="row nav-row recruit-pad mega-nav__nav-row--half-bottom-border">
                     <div class="col-md-12">
                       <a class="nav-link nav-link-main no-pad dark-text" rel="noopener" target="_blank" href="https://form.jotform.com/72396568714974"><strong>Baseball Form</strong></a>
                     </div>
                   </div>
                 </li>
                 <li class="nav-list">
-                  <div class="row nav-row">
+                  <div class="row nav-row mega-nav__nav-row--half-bottom-border">
                     <div class="col-md-12">
                       <a class="nav-link nav-link-main no-pad dark-text"  rel="noopener" target="_blank" href="https://form.jotform.com/72495899814982"><strong>Men's Basketball Form</strong></a>
                     </div>
                   </div>
                 </li>
                 <li class="nav-list">
-                  <div class="row nav-row">
+                  <div class="row nav-row mega-nav__nav-row--half-bottom-border">
                     <div class="col-md-12">
                       <a class="nav-link nav-link-main no-pad dark-text"  rel="noopener" target="_blank" href="https://form.jotform.com/72536200679963"><strong>Women's Basketball  Form</strong></a>
                     </div>
                   </div>
                 </li>
                 <li class="nav-list">
-                  <div class="row nav-row">
+                  <div class="row nav-row mega-nav__nav-row--half-bottom-border">
                     <div class="col-md-12">
                       <a class="nav-link nav-link-main no-pad dark-text"  rel="noopener" target="_blank" href="https://form.jotform.com/72476618714969"><strong>Soccer Form</strong></a>
                     </div>
                   </div>
                 </li>
                 <li class="nav-list">
-                  <div class="row nav-row">
+                  <div class="row nav-row mega-nav__nav-row--half-bottom-border">
                     <div class="col-md-12">
                       <a class="nav-link nav-link-main no-pad dark-text"  rel="noopener" target="_blank" href="https://form.jotform.com/72396278214967"><strong>Softball Form</strong></a>
                     </div>
@@ -242,14 +242,14 @@
             <div class="col-md-8">
               <ul class="nav flex-column">
               <li class="nav-list">
-                <div class="row nav-row facilities-drop-pad">
+                <div class="row nav-row facilities-drop-pad mega-nav__nav-row--half-bottom-border">
                   <div class="col-md-12">
                     <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/support/cash-bash"><strong>Cash Bash</strong></a>
                   </div>
                 </div>
               </li>
               <li class="nav-list">
-                <div class="row nav-row">
+                <div class="row nav-row mega-nav__nav-row--half-bottom-border">
                   <div class="col-md-12">
                     <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/support/cavalier-club"><strong>Cavalier Club</strong></a>
                   </div>
@@ -287,21 +287,21 @@
             <div class="col-md-8">
               <ul class="nav flex-column">
               <li class="nav-list">
-                <div class="row nav-row about-drop-pad">
+                <div class="row nav-row about-drop-pad mega-nav__nav-row--half-bottom-border">
                   <div class="col-md-12">
                     <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/about/student-athletes"><strong>Student-Athlete Experience</strong></a>
                   </div>
                 </div>
               </li>
               <li class="nav-list">
-                <div class="row nav-row">
+                <div class="row nav-row mega-nav__nav-row--half-bottom-border">
                   <div class="col-md-12">
                     <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/about/equity"><strong>Equity in Athletics</strong></a>
                   </div>
                 </div>
               </li>
               <li class="nav-list">
-                <div class="row nav-row">
+                <div class="row nav-row mega-nav__nav-row--half-bottom-border">
                   <div class="col-md-12">
                     <a class="nav-link nav-link-main no-pad dark-text" href="{{site.baseurl}}/about/staff"><strong>Staff Directory</strong></a>
                   </div>
